em/skin/theme_resources/stylesheets/foundation.css
/* ... */
dl.portlet dd.portletFooter a {
    color: #444444 !important;
    padding-top: 7px !important;
    padding-bottom: 7px !important;
    border: none !important;
}

dl.portlet dd.portletItem span.portletItemDetails {
   color: #333333;
   font-weight: normal;
   display: block;
}

div.portletWrapper {
   margin-bottom: 8px;
}

div.vcard table.vertical {
    width: 600px !important;
}

div.vcard table.vertical th {
   width: 150px;
}

table.listing tbody tr.even {
    background: none repeat scroll 0 0 #EEEEEE;
}

#content div.newsImageContainer p.discreet {
    margin-top: 35px !important;
    width: 200px !important;
}

div.tileItem h2.tileHeadline {
    margin-bottom: 0px !important;
}

div.tileItem div.documentByLine {
    margin-top: -4px;
    margin-bottom: 10px;
    margin-left: 2px;
}

#feedback_form div.formControls {
   margin: 0;
}

div.rollover .featuredItemDetailsPosted {
    font-size: 12px;
    float: left;
    margin-top: 5px;
}

#content .documentDescription, #content #description {
    padding-bottom: 10px;
}

.featuredVideo-date {
    color:white;
    float:left;
    padding: 0.45em 8px 0 0px;
    color: #EFEFF1;
    margin-bottom: 0px;
    font-size: 13px;
    line-height: 15px;
}

img#license_button1 {
    margin-left: -25px;
    margin-right: 10px;
}

.template-publish_video div.formControls {
margin-top: -50px;
margin-left: 25px;
}

div.footer div.portletWrapper {
    float: left;
    margin-right: 20px;
    width: 210px;
}

div.footer dl.portlet span.portletTopLeft, div.footer dl.portlet dt.portletHeader,  div.footer dl.portlet dd.portletItem {
    background: none !important;
    border: none;
}

div.footer dl.portlet dd.portletItem {
    padding: 0;
}

div.footer dl.portletNavigationTree dt.hiddenStructure {
    display: none !important;
}

div.footer dl.portlet ul.navTreeLevel0 > .navTreeItem {
    border: none !important;
    padding: 0 !important;
    line-height: 1.5em;
}

div.footer dl.portlet ul.navTreeLevel0 > li.section-about-us {
    border-bottom: 1px solid #AAA !important;
    margin-top: 15px;
}

div.footer dl.portlet ul.navTreeLevel0 > li.section-about-us a:link {
    color: #444444 !important;
    font-weight: bold !important;
    font-family: "Helvetica Neue",Arial,FreeSans,sans-serif !important;
}

li.section-about-us ul {
    margin-bottom: 3px;
}

div.footer dl.portlet dd.portletItem a:link {
    font-size: 14px !important;
    color: #205C90 !important;
    font-weight: normal !important;
}

span.posted h4 {
    margin-bottom: 0;
}

ul.news li span.posted, ul.events li span.posted {
  padding-top: 0px;
}

ul.news, ul.events {
  padding-top: 1px;
}

ul.events a img {
  display: none;
}

ul.author-info {
  width: 86.667% !important;
}

form#login_form {
    padding: 1em;
}

form.kssattr-formname-register {
    width: 75%;
}

.author-info li.paypal {
  padding: 1px 10px;
}

.video.featured div.description h3 {
  line-height: 1em;
}


div.FooterPortletManager1 dt.portletHeader a.tile {
  padding-bottom: 0.4em;
  font-size: 14px;
  line-height: 1.30;
}

#content div.FooterPortletManager1 dl.portletNavigationTree dt.portletHeader a.tile {
  border-bottom: 1px solid #aaa !important;
}

body.template-usergroup-userprefs .row .nine {
    width: 100% !important;
}

li.section-about-us a {
    font-size: 14px !important;
    line-height: 1.30;
    color: black !important;
    font-weight: bold !important;
}

